--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -37,3 +37,7 @@
 [data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+.navbar__logo img{
+  width: 90px;
+}
